@@ -162,7 +162,7 @@ enum {
 };
 
 enum {
-	MF_NOMEMO,
+	MF_NOMEMO,	//0
 	MF_NOTELEPORT,
 	MF_NOSAVE,
 	MF_NOBRANCH,
@@ -172,7 +172,7 @@ enum {
 	MF_PVP_NOPARTY,
 	MF_PVP_NOGUILD,
 	MF_GVG,
-	MF_GVG_NOPARTY,
+	MF_GVG_NOPARTY,	//10
 	MF_NOTRADE,
 	MF_NOSKILL,
 	MF_NOWARP,
@@ -182,7 +182,7 @@ enum {
 	MF_FOG,
 	MF_SAKURA,
 	MF_LEAVES,
-	MF_RAIN,
+	MF_RAIN,	//20
 	MF_INDOORS,
 	MF_NOGO,
 	MF_CLOUDS,
@@ -192,7 +192,7 @@ enum {
 	MF_GVG_DUNGEON,
 	MF_NIGHTENABLED,
 	MF_NOBASEEXP,
-	MF_NOJOBEXP,
+	MF_NOJOBEXP,	//30
 	MF_NOMOBLOOT,
 	MF_NOMVPLOOT,
 	MF_NORETURN,
@@ -202,7 +202,7 @@ enum {
 	MF_NOCOMMAND,
 	MF_NODROP,
 	MF_JEXP,
-	MF_BEXP,
+	MF_BEXP,	//40
 	MF_NOVENDING,
 	MF_LOADEVENT,
 	MF_NOCHAT
